k8s/payguard-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payguard-api
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payguard-api
  template:
    metadata:
      labels:
        app: payguard-api
    spec:
      containers:
      - name: payment-api
        image: ghcr.io/treeone008/payguard-api:latest
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: payguard-api-svc
  namespace: default
spec:
  selector:
    app: payguard-api
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payguard-api-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/v1/payment
        pathType: Prefix
        backend:
          service:
            name: payguard-api-svc
            port:
              number: 80
