k8s/update-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payguard-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: jinseong.cloud
    http:
      paths:
      - path: /api/v1/payment
        pathType: Prefix
        backend:
          service:
            name: payguard-api-svc
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-frontend-svc
            port:
              number: 80
